[package]
name = "wuziqi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
async-std = "1.10.0"
anyhow = "1.0.52"
unroll = "0.1.5"
log = "0.4.14"
rand = "0.8.4"

[dev-dependencies]
env_logger = "0.9.0"
